examples/error/hierachical_modelling_inlineembed2/ppError/error-GCCNONE.errorOutput
submodel/Untergruppe.xml:11: QName attribute value defined by '[uri]localname' syntax but no ] found.
MBS.mbsim.xml:55: [ecount=1] included from here
MBS.mbsx:8: [ecount=1] included from here
